Feat: protect endpoints with JWT
